--- a/index.html
+++ b/index.html
@@ -5,36 +5,34 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>JavaScript Finalwork</title>
+  <title>Fake Store</title>
   <link rel="stylesheet" href="./styles.css" />
 </head>
 
 <body>
+  <h2 class="header">Fake Store</h2>
+  <hr color="#00a0c1">
   <div class="container">
-    <div class="form1">
-      <button class="btn_more">Переделай! сначала дорогие</button>
-      <button class="btn_less">Переделай! сначала дешевые</button>
-      <ol class="instruction">
-        <h3>Инструкция</h3>
-        <li>Ввести число вещей</li>
-        <li>Выбрать сортировку ... или не выбрать =)</li>
-        <li>Нажать кнопку "Добавить"</li>
-        <li>Получить результат</li>
-        <li>Новый запрос - через обновление страницы</li>
-      </ol>
+    <div class="form f1">
+      <button class="btn more">Переделай! сначала дорогие</button>
+      <button class="btn less">Переделай! сначала дешевые</button>
+      <button class="btn clear">Очистить</button>
     </div>
-    <div class="form2">
-      <input type="number" class="inputNumber" placeholder="Введите количество вещей (от 1 до 20 )">
+    <div class="form f2">
+      <input type="number" class="inputNumber" placeholder="Введите количество товаров">
       <select class="selecter" size="1" name="selectSort">
-        <option value="" selected disabled>Выберите сортировку</option>
+        <option value="" selected disabled>Сортировать</option>
         <option value="less$">Сначала дешевле</option>
         <option value="more$">Сначала дороже</option>
       </select>
-      <button class="btn">Добавить</button>
+      <button id="add" class="btn">Добавить товары</button>
 
     </div>
   </div>
   <div class="posts"></div>
+  <footer>
+    <h6 class="footer">All right not reserved &#169 2021</h6>
+  </footer>
   <script src="./script.js"></script>
 </body>
 
